Fixing a bug on the release branch: #2046798  	  IE renders menu bar too tall
The fix is to make the menu bar 2 pixels taller.

--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -22,7 +22,7 @@ body {
 div#menu {
     margin-top:1em;
     background-color:#42637B;
-    height: 26px;
+    height: 28px;
 }
 
 div#menu ul {
